# esp32-c3-rust-std

./: Cargo.toml  README.md  build.rs  cfg.toml.template  sdkconfig.defaults
src/: lib.rs  main.rs
src/modules/: wifi.rs
src/server/: http.rs  mod.rs  template.rs
src/settings/: wifi.rs
