[package]
name = "esp32-c3-rust-std"
version = "0.1.0"
authors = ["Gerard CL <gerardcl@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = "0.45.0"
esp-idf-hal = "0.40.1"
embedded-hal = "0.2.7"
embedded-svc = "0.24.0"
toml-cfg = "0.1"

[build-dependencies]
embuild = "0.31.0"
toml-cfg = "0.1"
