[package]
name = "esp32-c3-rust-std"
version = "0.1.0"
authors = ["Gerard CL <gerardcl@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
esp-idf-hal = "0.40.1"
embedded-hal = "0.2.7"
embedded-svc = "0.24.0"
toml-cfg = "0.1"
anyhow = "=1.0.69"
log = "0.4"
# smol = "1.3"

[build-dependencies]
embuild = { version = "0.31", features = ["elf"] }
toml-cfg = "0.1"
anyhow = "1"
